--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   deploy:
@@ -21,7 +21,7 @@ jobs:
           script: |
             # Update code
             cd /home/ubuntu/addition-app
-            git pull origin main
+            git pull origin master
             
             # Backend
             cd backend
